<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="26dp"
    tools:context="com.zybooks.petcare.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="16sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_name"
        android:layout_gravity="center"
        android:textSize="26sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="24dp"/>

    <!-- Microchip ID -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="26dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/micro_edit_text"
            android:layout_weight="1"
            android:text="@string/microchip" />

        <EditText
            android:id="@+id/micro_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:hint="@string/micro_default"
            android:inputType="textCapCharacters"/>
    </LinearLayout>

    <!-- Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="26dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/name_edit_text"
            android:layout_weight="1"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:inputType="textCapWords"/>
    </LinearLayout>

    <!-- Gender -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="26dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/gender_radio_group"
            android:layout_weight="1"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="50dp"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/female_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checked="true"
                android:text="@string/gender_female" />
        </RadioGroup>
    </LinearLayout>

    <!-- Email Address -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="26dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/email_edit_text"
            android:layout_weight="1"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:hint="@string/email_default"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <!-- Access Code -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="26dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/access_edit_text"
            android:layout_weight="1"
            android:text="@string/access_code" />

        <EditText
            android:id="@+id/access_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:inputType="numberPassword"/>
    </LinearLayout>

    <!-- Confirm Access Code -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="26dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/confirm_edit_text"
            android:layout_weight="1"
            android:text="@string/confirm_code" />

        <EditText
            android:id="@+id/confirm_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:inputType="numberPassword"/>
    </LinearLayout>

    <!-- Breed -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="26dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/breed_spinner"
            android:layout_weight="1"
            android:text="@string/breed" />

        <Spinner
            android:id="@+id/breed_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2" />
    </LinearLayout>

    <!-- Neutered -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="26dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/neuter_checkbox"
            android:layout_weight="1"
            android:text="@string/neutered" />

        <CheckBox
            android:id="@+id/neuter_checkbox"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:layout_marginBottom="50dp"
            android:checked="true"
            android:text="@string/neuter_check"/>
    </LinearLayout>

    <!-- Reset and Submit Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="26dp" >

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="10dp"
            android:text="@string/reset_button" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button" />
    </LinearLayout>
</LinearLayout>
</ScrollView>