<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="26dp"
    android:paddingEnd="26dp">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="14"
        android:orientation="horizontal"
        tools:context="com.zybooks.petcare.MainActivity">

        <!-- App Name -->
        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:layout_columnSpan="3"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <!-- Form Name -->
        <TextView
            android:id="@+id/form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_name"
            android:textSize="26sp"
            android:layout_columnSpan="3"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_row="1"/>

        <!-- Space -->
        <Space
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_columnSpan="3"
            android:layout_row="2"/>

        <!-- Microchip ID -->
        <TextView
            android:id="@+id/microchip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/microchip"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginTop="28dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/micro_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/micro_default"
            android:inputType="textCapCharacters"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="125dp"/>

        <!-- Name -->
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textCapWords"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="125dp"/>

        <!-- Gender -->
        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginTop="12dp"/>

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="12dp">

            <RadioButton
                android:id="@+id/male_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"
                android:layout_marginEnd="75dp"/>

            <RadioButton
                android:id="@+id/female_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gender_female"/>
        </RadioGroup>

        <!-- Email Address -->
        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_default"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="125dp"/>

        <!-- Access Code -->
        <TextView
            android:id="@+id/access_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_code"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/access_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="numberPassword"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="125dp"/>

        <!-- Confirm Code -->
        <TextView
            android:id="@+id/confirm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_code"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/confirm_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="numberPassword"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="125dp"/>

        <!-- Breed -->
        <TextView
            android:id="@+id/breed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_marginTop="32dp"/>

        <Spinner
            android:id="@+id/breed_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_row="9"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="125dp"/>

        <!-- Neutered -->
        <TextView
            android:id="@+id/neuter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neutered"
            android:layout_row="10"
            android:layout_column="0"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_vertical"/>

        <CheckBox
            android:id="@+id/neuter_checkbox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/neuter_check"
            android:layout_row="10"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="125dp"/>

        <!-- Buttons -->
        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:layout_row="11"
            android:layout_column="1"
            android:layout_marginTop="30dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="11"
            android:layout_column="2"
            android:layout_marginTop="28dp"
            android:text="@string/submit_button" />

    </GridLayout>

</ScrollView>
