<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="26dp"
        tools:context="com.zybooks.petcare.MainActivity">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/form_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_name"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            app:layout_constraintVertical_bias="0.106" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_name"/>

        <!-- Microchip ID -->

        <!-- Name -->
        <TextView
            android:id="@+id/microchip_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/microchip"
            app:layout_constraintEnd_toStartOf="@+id/micro_edit_text"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_name" />

        <EditText
            android:id="@+id/micro_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:hint="@string/micro_default"
            android:inputType="textCapCharacters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/microchip_label"
            app:layout_constraintTop_toBottomOf="@id/form_name"
            app:layout_constraintWidth_percent="0.66" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@id/micro_edit_text"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/microchip_label" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="textCapWords"
            app:layout_constraintStart_toEndOf="@id/microchip_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/micro_edit_text"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintWidth_percent="0.66"/>

        <!-- Gender -->

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/gender"
            app:layout_constraintEnd_toStartOf="@+id/micro_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/gender_label"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

        <RadioButton
            android:id="@+id/male_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/gender_male"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="200dp"
            app:layout_constraintEnd_toStartOf="@id/gender_label"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/gender_label"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text"/>

        <RadioButton
            android:id="@+id/female_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:checked="true"
            android:text="@string/gender_female"
            app:layout_constraintEnd_toStartOf="@id/gender_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/male_radio_group"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>